[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/main_menu.gd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150
offset_top = -150
offset_right = 150
offset_bottom = 150
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Playcademy Vocab"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Learn with Spaced Repetition"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Start Session"
theme_override_font_sizes/font_size = 24

[node name="ProgressButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "View Progress"
theme_override_font_sizes/font_size = 24

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Settings"
theme_override_font_sizes/font_size = 24

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ProgressButton" to="." method="_on_progress_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
